<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <requestFocus />
            </LinearLayout>

            <ImageView
                android:id="@+id/loginLOGO"
                android:layout_width="wrap_content"
                android:layout_height="139dp"
                app:srcCompat="@mipmap/driver_1278011" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_person_pin_black_24dp" />

                <EditText
                    android:id="@+id/loginnameText"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/UsernameHint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_lock_outline_black_24dp"/>

                <EditText
                    android:id="@+id/loginpasswordText"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/PasswordHint"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="#000000" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <CheckBox
                android:id="@+id/remembermeCheck"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/remeberme" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:onClick="login"
                android:text="@string/LoginButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                android:textColorLink="@color/black_overlay" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <TextView
                android:id="@+id/tosignup"
                android:layout_width="287dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="toSignup"
                android:text="@string/ToSignup" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSecondary"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>