<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addJourneyActivity">



    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dip">

            <TextView
                android:id="@+id/error_addJourney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/Layout_Info_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="Information of Your Trip"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/trip_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Title"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/Layout_startLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="38dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_location_on_24px" />

                <EditText
                    android:id="@+id/startLocationText"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/startLocationHint"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="20dp"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_endLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_access_time_24px" />

                <TextView
                    android:id="@+id/starttime"
                    android:layout_width="350dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/starttime_first"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_date_range_24px" />

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="350dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/startdate_first"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/Layout_select_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_directions_car_24px" />

                <Spinner
                    android:id="@+id/spinnerVehicle"
                    android:layout_width="350dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_available_seating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="List of Stops"
                    android:textSize="30sp"
                    app:fontFamily="@font/roboto_thin" />

                <Button
                    android:id="@+id/Btn_addStop"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:background="@drawable/ic_baseline_add_box_24px"
                    android:onClick="addStop"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </LinearLayout>






            <ListView
                android:id="@+id/stop_list"
                android:layout_width="match_parent"
                android:layout_height="250dp">

            </ListView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="THE BOTTOM STOP IS THE DESTINATION"
                android:textSize="18sp"
                app:fontFamily="@font/roboto_thin" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />
            <LinearLayout
                android:id="@+id/add_stops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Btn_addJourney"
                    android:layout_width="172dp"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:onClick="addJourney"
                    android:text="Add Journey"
                    android:textColor="@android:color/white" />
                <Space
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <Button
                    android:id="@+id/Btn_cancelJourney"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:onClick="myback"
                    android:text="@string/cancel_Button"
                    android:textColor="@android:color/white" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSecondary"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>


    </android.support.constraint.ConstraintLayout>
