...
                    android:background="@drawable/ic_baseline_system_update_24px"
                    android:backgroundTint="#000000"
                    android:textColor="#FFFFFF"
                    android:textSize="10dp" />

                <Button
                    android:id="@+id/toAddTripButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="17dp"
...
